svg_filter: import better patch for blur offset error from librsvg.

See librsvg bug https://bugzilla.gnome.org/show_bug.cgi?id=605875.